--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MovieSearch</string>
+    <string name="search_movie">검색</string>
+    <string name="search_current">최근 검색</string>
 </resources>
